<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_ten"
        android:layout_marginTop="@dimen/dp_five">

        <TextView
            android:text="@string/length1_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Length1TextView"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Length1EditText"
            android:layout_weight="1"
            android:hint="Enter Length" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_ten">

        <TextView
            android:text="@string/Length2_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Length2TextView"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Length2EditText"
            android:layout_weight="1"
            android:hint="Enter Length" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_twelve">

        <TextView
            android:text="@string/Area_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AreaTextView"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AreaResultTextView"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dim_twentyFive"
        android:minHeight="179dp">

        <Button
            android:text="@string/Triangle_stringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonTriangle"
            android:minHeight="53dp" />

        <Button
            android:text="@string/Square_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonSquare"
            android:minHeight="53dip" />

        <Button
            android:text="@string/Circle_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonCircle"
            android:minHeight="53dp" />

        <Button
            android:text="@string/Rect_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonRectangle"
            android:minHeight="53dp" />

        <Button
            android:text="@string/Clearall_StringName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonClearAll"
            android:minHeight="53dip" />
    </LinearLayout>

</LinearLayout>